[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cenas/Menu/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/new_dynamicfont_small.tres" type="DynamicFont" id=3]

[node name="Menu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.7027
margin_top = -5.0
margin_right = 244.297
margin_bottom = 140.0
color = Color( 0.298039, 0.231373, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0.788235, 0.929412, 0.862745, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 59.277
margin_top = 4.81059
margin_right = 199.277
margin_bottom = 28.8106
custom_fonts/font = ExtResource( 2 )
text = "Evolutron Remade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="."]
margin_left = 5.0
margin_top = 44.8649
margin_right = 80.0
margin_bottom = 69.8649
rect_pivot_offset = Vector2( 37.5, 12.5 )
focus_mode = 1
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 1
text = "Novo Jogo"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
margin_left = 5.0
margin_top = 72.2334
margin_right = 80.0
margin_bottom = 97.2334
rect_pivot_offset = Vector2( 37.5, 12.5 )
focus_mode = 1
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 1
text = "Options"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Button" parent="."]
margin_left = 7.06505
margin_top = 98.5676
margin_right = 43.065
margin_bottom = 123.568
custom_fonts/font = ExtResource( 3 )
text = "Sair"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
